src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey_3/InvalidUnexpectedTranslationKey_3.php
<?php

namespace Invalid\UnexpectedTranslationKey_3;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey_3 extends ClarolinePlugin
{
    public function getDescriptionTranslationKey()
    {
        return '';
    }
}